[package]
name = "charitable_server"
version = "0.1.0"
authors = ["Rampeo Mattone <46228228+RampeoMattone@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
chrono = "0.4.19"
mysql = "20.0.1"
