[package]
name = "charitable_server"
version = "0.1.0"
authors = ["Rampeo Mattone rampeo.mattone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
sqlx = { version = "0.4.1", features = [ "runtime-tokio-native-tls", "mysql", "macros" ] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"